# otus-ml-prof

./: .gitignore  Makefile  README.md  pyproject.toml
hw-01/: About Dataset.md  ReadMe.md
hw-02/: About Dataset.md  ReadMe.md
hw-03/: About Dataset.md  ReadMe.md  hw.ipynb
hw-04/: About Dataset.md  ReadMe.md  hw.ipynb
hw-05/: ReadMe.md
hw-06/: ReadMe.md  hw_CNN.ipynb  hw_CNN_chat-gpt.ipynb
hw-07/: About Dataset.md  ReadMe.md
hw-08/: ReadMe.md
hw-09/: ReadMe.md  hw.ipynb
hw-10/: ReadMe.md  hw.ipynb
lib/: utils.py
