[tool.poetry]
name = "otus-ml-basic"
version = "0.1.0"
description = "Otus ML basic practice"
authors = ["Denis A. Valeev <dendionx@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
ipykernel = "^6.29.5"
pylint = "^3.3.6"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
numpy = "^2.2.4"
sympy = "^1.13.3"
scipy = "^1.15.2"
fipy = "^3.4.5"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
kaggle = "^1.7.4.5"
kagglehub = "^0.3.12"
ipywidgets = "^8.1.7"
scikit-learn = "^1.7.0"
graphviz = "^0.21"
pydotplus = "^2.0.2"
catboost = "^1.2.8"
lightgbm = "^4.6.0"
xgboost = "^3.1.0"
networkx = "^3.5"
torchsummary = "^1.5.1"
opencv-python = "^4.12.0.88"
torch = {version = "^2.9.1", source = "pytorch"}
torchvision = {version = "^0.24.1", source = "pytorch"}
albumentations = "^2.0.8"
segmentation-models-pytorch = "^0.5.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
