[tool.poetry]
name = "otus-ml-basic"
version = "0.1.0"
description = "Otus ML basic practice"
authors = ["Denis A. Valeev <dendionx@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
ipykernel = "^6.29.5"
pylint = "^3.3.6"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
numpy = "^2.2.4"
sympy = "^1.13.3"
scipy = "^1.15.2"
fipy = "^3.4.5"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
kaggle = "^1.7.4.5"
kagglehub = "^0.3.12"
ipywidgets = "^8.1.7"
scikit-learn = "^1.7.0"
graphviz = "^0.21"
pydotplus = "^2.0.2"
catboost = "^1.2.8"
lightgbm = "^4.6.0"
xgboost = "^3.1.0"
networkx = "^3.5"
torchsummary = "^1.5.1"
opencv-python = "^4.12.0.88"
torch = {version = "^2.9.1", source = "pytorch"}
torchvision = {version = "^0.24.1", source = "pytorch"}
albumentations = "^2.0.8"
segmentation-models-pytorch = "^0.5.0"
nltk = "^3.9.2"
spacy = "^3.8.11"
pymorphy3 = "^2.0.6"
fake-useragent = "^2.2.0"
selenium = "^4.39.0"
corus = "^0.10.0"
datasets = "^4.5.0"
evaluate = "^0.4.6"
razdel = "^0.5.0"
seqeval = "^1.2.2"
ipymarkup = "^0.9.0"
navec = "^0.10.0"
slovnet = "^0.6.0"
transformers = "^4.57.6"
bertviz = "^1.4.1"
accelerate = "^1.12.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
